--- a/mathjax/mathjax.html
+++ b/mathjax/mathjax.html
@@ -1,15 +1,125 @@
 <head>
+  <meta charset="utf-8">
   <title>mathjax</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet/less" href="/less/mathjax.less">
+  <style type="text/css">
+    body {
+      padding-top: 60px;
+      padding-bottom: 40px;
+    }
+    .sidebar-nav {
+      padding: 9px 0;
+    }
+  </style>
+  <link rel="stylesheet/less" href="/less/mathjax-responsive.less">
   <script src="/js/less/less-1.3.0.min.js" type="text/javascript"></script>
 </head>
 
 <body>
-  {{> hello}}
-</body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click">
-</template>
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container-fluid">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href="#">Project name</a>
+        <div class="btn-group pull-right">
+          <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+            <i class="icon-user"></i> Username
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Profile</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Sign Out</a></li>
+          </ul>
+        </div>
+        <div class="nav-collapse">
+          <ul class="nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row-fluid">
+
+      <div class="span4">
+        <div class="well sidebar-nav">
+          <ul class="nav nav-list">
+            <li class="nav-header">Sidebar</li>
+            <li class="active"><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li class="nav-header">Sidebar</li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li class="nav-header">Sidebar</li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+          </ul>
+        </div><!--/.well -->
+      </div><!--/span-->
+
+      <div class="span8">
+        <div class="hero-unit">
+          <h1>Hello, world!</h1>
+
+          <p>This is a template for a simple marketing or
+          informational website. It includes a large callout called
+          the hero unit and three supporting pieces of
+          content. Use it as a starting point to create something more
+          unique.</p>
+          <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+        </div>
+
+        <div class="row-fluid">
+          <div class="span6">
+            <h2>Heading</h2>
+            <p>Donec id elit non mi porta gravida at eget
+              metus. Fusce dapibus, tellus ac cursus commodo, tortor
+              mauris condimentum nibh, ut fermentum massa justo sit
+              amet risus. Etiam porta sem malesuada magna mollis
+              euismod. Donec sed odio dui. </p>
+            <p><a class="btn" href="#">View details &raquo;</a></p>
+          </div><!--/span-->
+          <div class="span6">
+            <h2>Heading</h2>
+            <p>Donec id elit non mi porta gravida at eget
+              metus. Fusce dapibus, tellus ac cursus commodo, tortor
+              mauris condimentum nibh, ut fermentum massa justo sit
+              amet risus. Etiam porta sem malesuada magna mollis
+              euismod. Donec sed odio dui. </p>
+            <p><a class="btn" href="#">View details &raquo;</a></p>
+          </div><!--/span-->
+        </div><!--/row-->
+
+      </div>
+
+
+    </div><!--/span-->
+  </div><!--/row-->
+
+
+
+
+
+  <footer>
+    <p>&copy; Company 2012</p>
+  </footer>
+
+</body>
