--- a/mathjax/mathjax.html
+++ b/mathjax/mathjax.html
@@ -37,83 +37,83 @@
 </head>
 
 <body>
-  {{>navbar}}
-
+  <div class="navbar navbar-fixed-top">
+    {{>navbar}}
+  </div>
   <div class="container-fluid">
-    <div class="row-fluid">
-
+    <section class="row-fluid">
       <div class="span4">
         {{>sidebar}}
       </div>
-
       <div class="span8">
         <div class="row-fluid">
-          <div class="span4">
-            <p><a class="btn btn-primary btn-large">New Formula</a></p>
-          </div>
-          <div class="span8 about">
-            <p>A personal notebook of non-obvious-formulas</p>
-          </div>
+          {{>about}}
         </div>
-
-        <div class="row-fluid">
-          <div class="span6">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget
-              metus. Fusce dapibus, tellus ac cursus commodo, tortor
-              mauris condimentum nibh, ut fermentum massa justo sit
-              amet risus. Etiam porta sem malesuada magna mollis
-              euismod. Donec sed odio dui. </p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
-          </div><!--/span-->
-          <div class="span6">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget
-              metus. Fusce dapibus, tellus ac cursus commodo, tortor
-              mauris condimentum nibh, ut fermentum massa justo sit
-              amet risus. Etiam porta sem malesuada magna mollis
-              euismod. Donec sed odio dui. </p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
-          </div><!--/span-->
-        </div><!--/row-->
-
+        {{>article}}
       </div>
-
-
-    </div><!--/span-->
-  </div><!--/row-->
-
+    </section>
+  </div>
 </body>
 
 <template name="sidebar">
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
-      <li><a href="#">Concrete Mathematics</a></li>
-      <li><a href="#">Geometry</a></li>
+      <li><a href="#">Concrete Mathematics</a>
+      <li><a href="#">Geometry</a>
     </ul>
   </div>
 </template>
 
+<template name="article">
+  <article class="row-fluid">
+    <header class="span9">
+      <h3>Description</h3>
+    </header>
+    <div class="span3">
+      <p><a class="btn" href="#">Delete</a>
+    </div>
+    <div class="description">
+      <p>Donec id elit non mi porta gravida at eget
+        metus. Fusce dapibus, tellus ac cursus commodo, tortor
+        mauris condimentum nibh, ut fermentum massa justo sit
+        amet risus. Etiam porta sem malesuada magna mollis
+        euismod. Donec sed odio dui.
+      <p>Donec id elit non mi porta gravida at eget
+        metus. Fusce dapibus, tellus ac cursus commodo, tortor
+        mauris condimentum nibh, ut fermentum massa justo sit
+        amet risus. Etiam porta sem malesuada magna mollis
+        euismod. Donec sed odio dui.
+    </div>
+  </article>
+</template>
+
+<template name="about">
+  <div class="span4">
+    <p><a class="btn btn-primary btn-large">New Formula</a>
+  </div>
+  <div class="span8 about">
+    <p>A personal notebook of non-obvious-formulas
+  </div>
+</template>
+
 <template name="navbar">
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container-fluid">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="#">MathFormulas</a>
-        <nav class="nav-collapse">
-          <ul class="nav">
-            <li><a href="http://www.mathjax.org/">MathJax</a></li>
-            <li><a href="http://www.mathjax.org/docs/2.0/index.html">Docs</a></li>
-            <li><a href="http://tug.org/">TeX User Group</a></li>
-            <li><a href="http://lesscss.org/">Less</a></li>
-            <li><a href="http://twitter.github.com/bootstrap/less.html">Bootstrap</a></li>
-          </ul>
-        </nav>
-      </div>
+  <div class="navbar-inner">
+    <div class="container-fluid">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="#">MathFormulas</a>
+      <nav class="nav-collapse">
+        <ul class="nav">
+          <li><a href="http://www.mathjax.org/">MathJax</a>
+          <li><a href="http://www.mathjax.org/docs/2.0/index.html">Docs</a>
+          <li><a href="http://tug.org/">TeX User Group</a>
+          <li><a href="http://lesscss.org/">Less</a>
+          <li><a href="http://twitter.github.com/bootstrap/less.html">Bootstrap</a>
+        </ul>
+      </nav>
     </div>
   </div>
 </template>
