--- a/mathjax/mathjax.html
+++ b/mathjax/mathjax.html
@@ -67,22 +67,20 @@
 <template name="article">
   <article class="row-fluid">
     <header class="span9">
-      <h3>Description</h3>
+      <h3>Cauchy–Schwarz inequality</h3>
     </header>
     <div class="span3">
       <p><a class="btn" href="#">Delete</a>
     </div>
     <div class="description">
-      <p>Donec id elit non mi porta gravida at eget
-        metus. Fusce dapibus, tellus ac cursus commodo, tortor
-        mauris condimentum nibh, ut fermentum massa justo sit
-        amet risus. Etiam porta sem malesuada magna mollis
-        euismod. Donec sed odio dui.
-      <p>Donec id elit non mi porta gravida at eget
-        metus. Fusce dapibus, tellus ac cursus commodo, tortor
-        mauris condimentum nibh, ut fermentum massa justo sit
-        amet risus. Etiam porta sem malesuada magna mollis
-        euismod. Donec sed odio dui.
+      <p>In Euclidean space $R^n$ with the standard inner product,
+        the Cauchy–Schwarz inequality is:
+        $$
+          \left(\sum_{i=1}^n x_i y_i\right)^2
+          \le
+          \left(\sum_{i=1}^n x^2_i\right)
+          \left(\sum_{i=1}^n y^2_i\right)
+        $$
     </div>
   </article>
 </template>
